--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,17 @@
     <string name="diagnostic_centers">Diagnostic Centers</string>
     <string name="hotlines">Hotlines</string>
     <string name="ambulance">Ambulance</string>
+    <string name="see_all">See All</string>
+    <string name="consult_with_them_from_home">Consult with them from home</string>
+    <string name="doctors_nearby_you">Doctors Nearby You</string>
+    <string name="protect_yourself_and_others">Protect yourself and others</string>
+    <string name="common_prevention_tips">Common Prevention Tips</string>
+    <string name="welcome">Welcome</string>
+    <string name="tips_mask_wear">Wear a mask when physical distancing is not possible.</string>
+    <string name="tips_sneeze">Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze.</string>
+    <string name="tips_handwash">Clean your hands often. Use soap and water, or an alcohol-based hand rub.</string>
+    <string name="tips_cough">If you have a fever, cough and difficulty breathing, seek medical attention.</string>
+    <string name="tips_social_distance">Maintain a safe distance from anyone who is coughing or sneezing.</string>
+    <string name="tips_touching">Do not touch your eyes, nose or mouth.</string>
+    <string name="tips_stay_home">Stay home if you feel unwell.</string>
 </resources>
