--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="dry_cough">Dry Cough</string>
     <string name="tiredness">Tiredness</string>
     <string name="fever">Fever</string>
-    <string name="rska_note">rska</string>
+    <string name="rska_note">Please provide the following information\nof your\'s last 14 days</string>
     <string name="account">Account</string>
     <string name="emergency">Emergency</string>
     <string name="about">About</string>
@@ -53,4 +53,38 @@
     <string name="mobile_number">Mobile No</string>
     <string name="website">Website</string>
     <string name="name">Name</string>
+    <string name="full_name">Full Name</string>
+    <string name="choose_a_date">Choose a date</string>
+    <string name="date_of_birth">Date of Birth</string>
+    <string name="gender">Gender</string>
+    <string name="blood_group">Blood Group</string>
+    <string name="thana">Thana</string>
+    <string name="district">District</string>
+    <string name="occupation">Occupation</string>
+    <string name="enter_your_qualification">Enter your qualification</string>
+    <string name="qualification">Qualification</string>
+    <string name="choose_options">Choose options</string>
+    <string name="specializations">Specializations</string>
+    <string name="enter_your_experience">Enter your experience</string>
+    <string name="experience">Experience</string>
+    <string name="enter_your_fee">Enter your fee</string>
+    <string name="fee">Fee</string>
+    <string name="choose_time">Choose time</string>
+    <string name="practice_time_from">Practice Time From</string>
+    <string name="practice_time_to">Practice Time To</string>
+    <string name="offdays">Offdays</string>
+    <string name="enter_hospital_name">Enter Hospital\'s Name</string>
+    <string name="hospital_name">Hospital\'s Name</string>
+    <string name="hospital_thana">Hospital\'s Thana</string>
+    <string name="hospital_district">Hospital\'s District</string>
+    <string name="enter_hospital_mobile_no">Enter hospital\'s mobile no</string>
+    <string name="hospital_mobile_no">Hospital\'s Mobile No</string>
+    <string name="provide_services">Provide Services</string>
+    <string name="enter_your_name">Enter your name</string>
+    <string name="plasma_donate">Plasma Donate</string>
+    <string name="check_again">Check Again</string>
+    <string name="risk_mild">Risk level:\nMild\n\nSuggestions:\nStay your home, consult with your nearby doctors and follow corona prevention tips.</string>
+    <string name="risk_moderate">Risk level:\nModerate\n\nSuggestions:\nImmediately test COVID-19 from your nearby "COVID-19 Test Center" and follow corona prevention tips.</string>
+    <string name="risk_severe">Risk level:\nSevere\n\nSuggestions:\nImmediately go to your nearby hospital, test COVID-19, Consult with doctors and follow prevention tips.</string>
+    <string name="risk_none">Risk level:\nNone\n\nSuggestions:\nStay your home and follow corona prevention tips.</string>
 </resources>
