--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,5 @@
     <string name="cm_title">Change your mobile</string>
     <string name="cm_desc">We will send you a <b>One Time Password</b>\non the number</string>
     <string name="new_mobile_number">New Mobile Number</string>
+    <string name="search">Search</string>
 </resources>
