--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,9 @@
     <string name="cm_desc">We will send you a <b>One Time Password</b>\non the number</string>
     <string name="new_mobile_number">New Mobile Number</string>
     <string name="search">Search</string>
+    <string name="location">Location</string>
+    <string name="last_active">Last Active</string>
+    <string name="age">Age</string>
+    <string name="call_now">Call Now</string>
+    <string name="call">Call</string>
 </resources>
