Doctor Profile Incomplete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="age">Age</string>
     <string name="call_now">Call Now</string>
     <string name="call">Call</string>
+    <string name="feedbacks">Feedbacks</string>
 </resources>
